Bug 383336 - Non german date display on german transaction report
Summary: Non german date display on german transaction report
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 4.7.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-09 23:39 UTC by Ralf Habacker
Modified: 2019-08-31 14:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
kmymoney file (5.18 KB, application/x-kmymoney)
2017-08-09 23:39 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-08-09 23:39:20 UTC
Created attachment 107184 [details]
kmymoney file

Generating a 'transaction by month' report with german translated kmymoney prints out 'Monat von 2015-01-01' as group label instead the expected 'Monat von 01.01.2015'

How to reproduce:
1. start kmymoney
2. select german language
3. open appended kmymoney file
4. select reports tab and choose report 'transaction by month'

What happens ?
The reports print out the english date version on the report

What is expected ?
The reports should print out the date in german notation
Comment 1 Ralf Habacker 2017-08-10 00:30:03 UTC
Git commit f89ee5e51b2b5f410a462c8242ddd4ad68a53f43 by Ralf Habacker.
Committed on 10/08/2017 at 00:29.
Pushed by habacker into branch '4.8'.

Fix 'Non german date display on german transaction report'

The 'month' and 'week' keys in the query table now contains
the internationalized date for display.
For sorting purpose the same set of keys with a 'sort' postfix
has been added using language independent iso date format.

FIXED-IN:4.8.1

M  +15   -3    kmymoney/reports/querytable.cpp

https://commits.kde.org/kmymoney/f89ee5e51b2b5f410a462c8242ddd4ad68a53f43
Comment 2 Ralf Habacker 2018-05-16 12:37:11 UTC
Git commit 96753617d250e2f8014014cdbc24845a15e80d4b by Ralf Habacker.
Committed on 16/05/2018 at 12:36.
Pushed by habacker into branch '4.8'.

querytabletest: Fix parsing of generated html

In the mentioned bug, the date format for QueryTable reports was changed.
This change must also be transferred to the associated component test.

M  +12   -2    kmymoney/reports/querytable.cpp
M  +1    -0    kmymoney/reports/querytable.h
M  +6    -6    kmymoney/reports/querytabletest.cpp

https://commits.kde.org/kmymoney/96753617d250e2f8014014cdbc24845a15e80d4b
Comment 3 Thomas Baumgart 2019-08-31 14:52:35 UTC
Correct date format is printed in 5.0.6