Fix 'Non german date display on german transaction report'

The 'month' and 'week' keys in the query table now contains
the internationalized date for display.
For sorting purpose the same set of keys with a 'sort' postfix
has been added using language independent iso date format.

FIXED-IN:4.8.1
BUG:383336